# mlfinlab

./: .bumpversion.cfg  .coveragerc  .gitignore  .pycodestyle  .pylintrc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Generate_Synt_Data_Set.ipynb  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  coverage  optional-requirements.txt  pycodestyle  requirements.txt  rtd_requirements.txt  sandbox.ipynb  setup.cfg  setup.py  test
.cache/v/cache/: lastfailed
.cph_tmpy89uivjo/: pkg-libtiff-4.0.10-hb898794_2.tar.zst
.github/: FUNDING.yml  pull_request_template.md
asv_bench/: .gitignore  Makefile  asv.conf.json
asv_bench/benchmarks/: example.py
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  requirements.txt
docs/source/_templates/: layout.html
docs/source/additional_information/: analytics.rst  contact.rst  contributing.rst  license.rst  privacy_gdpr.rst
mlfinlab/: .coveragerc  README.md  __init__.py  pylint  setup.cfg
mlfinlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlfinlab/backtest_statistics/: __init__.py  backtests.py  statistics.py
mlfinlab/bet_sizing/: README.md  __init__.py  bet_sizing.py  bet_sizing_tutorial.ipynb  bet_sizing_tutorial_dynamic.ipynb  ch10_snippets.py  ef3m.py  ef3m_testing.ipynb  kelly.py  targeting.py  test_bet_sizing.py  test_ch10_snippets.py  test_ef3m.py
mlfinlab/clustering/: __init__.py  feature_clusters.py  hierarchical_clustering.py  onc.py
mlfinlab/codependence/: __init__.py  codependence_matrix.py  correlation.py  gnpr_distance.py  information.py  information_matrix.py  matrix_dist.py  optimal_transport.py
mlfinlab/cross_validation/: __init__.py  combinatorial.py  cross_validation.py
mlfinlab/data_generation/: __init__.py  bootstrap.py  correlated_random_walks.py  corrgan.py  data_verification.py  hcbm.py  vines.py
mlfinlab/data_structures/: __init__.py  base_bars.py  code.py  data_structures.py  etf_trick.py  fast_ewma.py  futures_roll.py  get_bars_run.py  imbalance_data_structures.py  information_bars.py  result.csv  run_data_structures.py  standard_data_structures.py  test.py  time_bars.py  time_data_structures.py
mlfinlab/datasets/: __init__.py  load_datasets.py
mlfinlab/ensemble/: SeqBootstrapRandomForest.py  __init__.py  forest.py  sb_bagging.py  sb_bagging_classifier.py  sequential_bootstrap_resampler.py
mlfinlab/feature_importance/: __init__.py  cfi.py  fingerpint.py  importance.py  orthogonal.py
mlfinlab/features/: __init__.py  fracdiff.py
mlfinlab/filters/: __init__.py  filters.py
mlfinlab/labeling/: Matrix Flags Demo.ipynb  __init__.py  accumulation_distribution.py  bull_bear.py  excess_over_mean.py  excess_over_median.py  fixed_time_horizon.py  forward_return.py  labeling.py  matrix_flags.py  raw_return.py  return_vs_benchmark.py  tail_sets.py  trend_scanning.py  vs_benchmark.py
mlfinlab/microstructural_features/: __init__.py  encoding.py  entropy.py  feature_generator.py  first_generation.py  misc.py  second_generation.py  third_generation.py
mlfinlab/modelling/: decision_tree.py  random_forest.py
mlfinlab/multi_product/: __init__.py  etf_trick.py
mlfinlab/networks/: __init__.py  almst.py  dash_graph.py  dual_dash_graph.py  graph.py  mst.py  pmfg.py  visualisations.py
mlfinlab/online_portfolio_selection/: AA.py  BAH Tests.ipynb  BAH.py  BCRP Tests.ipynb  BCRP.py  BESTSTOCK.py  Benchmarks Walkthrough.ipynb  Best Stock Tests.ipynb  Best_Stock.py  CORN.py  CORN_K.py  CORN_U.py  CRP Tests.ipynb  CRP.py  CWMR.py  Conceptual Understanding.ipynb  EG.py  FTL.py  FTRL.py  Mean Reversion.ipynb  Momentum Walkthrough.ipynb  OLMAR.py  OLPS Tests.ipynb  OLPS.py  PAMR.py  Pattern Matching-Copy1.ipynb  Pattern Matching.ipynb  Pickle Test.ipynb  Presentation.ipynb  README_OLPS.md  Running All OLPS.ipynb  UP.py  UniversalPortfolio.py  __init__.py  bah.py  base.py  bcrp.py  best_stock.py  corn.py  cornk.py  (+25 more)
mlfinlab/optimal_mean_reversion/: __init__.py  ou_model.py
mlfinlab/portfolio_optimization/: __init__.py  cla.py  hcaa.py  herc.py  hrp.py  mean_variance.py  nco.py  returns_estimators.py  risk_estimators.py  risk_metrics.py  tic.py
mlfinlab/regression/: __init__.py  history_weight_regression.py
mlfinlab/sample_weights/: __init__.py  attribution.py  bootstrapping.py  concurrent.py  unique.py
mlfinlab/sampling/: __init__.py  bootstrapping.py  concurrent.py
mlfinlab/scripts/: run_tests.py
mlfinlab/statistical_arbitrage/: __init__.py  base.py  check_conditions.py  cointegration.py  eigenportfolio.py  filtering.py  pairs_regression.py  pca.py  regression.py  signals.py  stationarity.py
mlfinlab/structural_breaks/: __init__.py  chow.py  cusum.py  explosive.py  sadf.py
mlfinlab/supervised_learning/: decision_tree.py
mlfinlab/tests/: __init__.py  test_BAH.py  test_BCRP.py  test_BESTSTOCK.py  test_CRP.py  test_EG.py  test_FTL.py  test_FTRL.py  test_OLMAR.py  test_OLPS.py  test_PAMR.py  test_backtest_statistics.py  test_backtests.py  test_best_constant_rebalanced_portfolio.py  test_best_stock.py  test_bet_sizing.py  test_buy_and_hold.py  test_ch10_snippets.py  test_cla.py  test_codependence.py  test_cointegration.py  test_combinatorial_cross_validation.py  test_confidence_weighted_mean_reversion.py  test_constant_rebalanced_portfolio.py  test_correlation_driven_nonparametric_learning.py  test_correlation_driven_nonparametric_learning_k.py  test_correlation_driven_nonparametric_learning_uniform.py  test_cross_validation.py  test_data_structures.py  test_datasets.py  test_decision_tree.py  test_ef3m.py  test_eigenportfolio.py  test_etf_trick.py  test_exponential_gradient.py  test_fast_ewma.py  test_feature_clusters.py  test_feature_importance.py  test_filters.py  test_fingerpint.py  (+57 more)
mlfinlab/util/: __init__.py  data_manipulation.py  data_operation.py  fast_ewma.py  generate_dataset.py  misc.py  multiprocess.py  utils.py  volatility.py  volume_classifier.py
scripts/: .coveragerc  c2  coverage  run_tests.py
tests/: test_imbalance_data_structures.py  test_labels.py
tests/test_data/: dollar_bar_sample.csv
(+283 files in other folders)
