[metadata]
name = mlfinlab
version = 0.10.0
author = Hudson and Thames Quantitative Research
author_email = research@hudsonthames.org
licence = All Rights Reserved
licence-file = LICENSE.txt
description = MlFinlab helps portfolio managers and traders who want to leverage the power of machine learning by providing reproducible, interpretable, and easy to use tools.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://www.hudsonthames.org/
project_urls =
    Documentation = https://mlfinlab.readthedocs.io/en/latest/
    Bug Reports = https://github.com/hudson-and-thames/mlfinlab/issues
    Project Boards = https://github.com/orgs/hudson-and-thames/projects
    Source = https://github.com/hudson-and-thames/mlfinlab
    Blog = https://hudsonthames.org/blog/
    Mentorship Program = https://hudsonthames.org/mentorship/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    machinelearning
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    ~=3.6
setup_requires =
    setuptools
install_requires =
    pandas==0.25.3
    numpy==1.17.3
    xmlrunner==1.7.7
    numba==0.46.0
    scikit-learn==0.21.3
    scipy==1.3.1
    statsmodels==0.11.1
    matplotlib==3.1.1
    cvxpy==1.0.25

[options.packages.find]
package_dir =
    mlfinlab
exclude =
    contrib
    docs
